--- a/HTML5Application/public_html/css/login.css
+++ b/HTML5Application/public_html/css/login.css
@@ -56,4 +56,8 @@ a:visited{
     background-color: white;
     color: #13C1AC;
 }
+#pie{
+    font: bold 15px arial, sans-serif;
+    color: white;
+}
 
