--- a/HTML5Application/public_html/css/registrarse.css
+++ b/HTML5Application/public_html/css/registrarse.css
@@ -27,6 +27,9 @@ body{
 .botonRegistrarse:hover{
     background-color: lightsteelblue;
 }
-
+#pie{
+    font: bold 15px arial, sans-serif;
+    color: white;
+}
 
 
